perf(jdk21): ontologyTaskExecutor to virtual threads
Replaces the ThreadPoolTaskExecutor used to load ontologies in
background with a Spring ConcurrentTaskExecutor wrapping the JDK 21
virtual-thread-per-task executor. The
gemma.ontology.loader.corePoolSize property no longer constrains this
executor.

Risk note carried in the bean's javadoc: ontology loaders delegate to
baseCode's OntologyService, whose locking posture is not controlled by
Gemma. The first production boot on JDK 21 should run with
-Djdk.tracePinnedThreads=full so any carrier-thread pinning in the
baseCode loader is caught early.